# mbed-spirit1-example

./: .gitignore  .mbed  .mbedignore  CMakeLists.txt  README.md  Register_Setting.xml
SPIRIT1_Library/Inc/: MCU_Interface.h
TESTS/reg/readRegValues/: main.cpp
src/: Register_Setting.c  main.cpp  spirit1Driver.c  spirit1Driver.h
